ctm-sf-homeloan-app/main/default/objects/CreditScore__c/CreditScore__c.object-meta.xml
<CustomObject>
    <label>Credit Score</label>
    <nameField>
        <label>Credit Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>