ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Score</relationshipLabel>
    <relationshipName>Credit_Score</relationshipName>
    <type>Lookup</type>
</CustomField>