ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/BankruptcyActactions__c.field-meta.xml
<CustomField>
    <fullName>BankruptcyActactions__c</fullName>
    <label>Bankruptcy Act actions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>