ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Commercialcreditdefaults__c.field-meta.xml
<CustomField>
    <fullName>Commercialcreditdefaults__c</fullName>
    <label>Commercial credit defaults</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>