ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Commercialcreditenquiries__c.field-meta.xml
<CustomField>
    <fullName>Commercialcreditenquiries__c</fullName>
    <label>Commercial credit enquiries</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>