ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Consumercreditaccounts__c.field-meta.xml
<CustomField>
    <fullName>Consumercreditaccounts__c</fullName>
    <label>Consumer credit accounts</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>