ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Consumercreditdefaults__c.field-meta.xml
<CustomField>
    <fullName>Consumercreditdefaults__c</fullName>
    <label>Consumer credit defaults</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>