ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Consumercreditenquiries__c.field-meta.xml
<CustomField>
    <fullName>Consumercreditenquiries__c</fullName>
    <label>Consumer credit enquiries</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>