ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Courtactions__c.field-meta.xml
<CustomField>
    <fullName>Courtactions__c</fullName>
    <label>Court actions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>