ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Creditfileaccessrecord__c.field-meta.xml
<CustomField>
    <fullName>Creditfileaccessrecord__c</fullName>
    <label>Credit file access record</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>