ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/CreditScoreChange__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreChange__c</fullName>
    <label>Credit Score Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Unchanged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>