ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/CreditScoreId__c.field-meta.xml
<CustomField>
    <fullName>CreditScoreId__c</fullName>
    <label>Credit Score Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>