ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/LoanApplicant__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>LoanApplicant__c</referenceTo>
    <relationshipLabel>Credit Score</relationshipLabel>
    <relationshipName>Credit_Score</relationshipName>
    <type>Lookup</type>
</CustomField>