ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Seriouscreditinfringements__c.field-meta.xml
<CustomField>
    <fullName>Seriouscreditinfringements__c</fullName>
    <label>Serious credit infringements</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>