ctm-sf-homeloan-app/main/default/objects/CreditScore__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>If(!ISBLANK(LoanApplicant__c), &apos;Application VOI&apos;, 
If(ISPICKVAL(CreditScoreChange__c,&apos;&apos;) , &apos;Credit Score Journey&apos;,&apos;Monthly Refresh&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>